Fix nav jumping issue with affix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,6 +53,12 @@ header {
   background-color: #f8f8f8;
 }
 
+.affix {
+  body {
+    padding-top: 60px;
+  }
+}
+
 .masthead {
   border-width: 1px;
   border-bottom-width: 1px;
